--- a/src/main/java/uiDecoreted/Tenant/UserHomePanel.form
+++ b/src/main/java/uiDecoreted/Tenant/UserHomePanel.form
@@ -97,7 +97,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="100" y="50" width="300" height="200"/>
+          <AbsoluteConstraints x="110" y="80" width="300" height="200"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -107,11 +107,11 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="420" y="40" width="-1" height="-1"/>
+          <AbsoluteConstraints x="450" y="40" width="360" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="roomLabel">
+    <Component class="javax.swing.JLabel" name="roomnameLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Superior Double Room"/>
       </Properties>
